--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-menubar": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@reduxjs/toolkit": "^2.7.0",
     "class-variance-authority": "^0.7.1",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
