--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
+    "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
