--- a/dbPizza.json5
+++ b/dbPizza.json5
@@ -11,6 +11,7 @@
         diameter: 30,
         weight: 500,
       },
+      count: 0,
     },
     {
       id: 2,
@@ -23,6 +24,7 @@
         diameter: 30,
         weight: 500,
       },
+      count: 0,
     },
     {
       id: 3,
@@ -35,6 +37,7 @@
         diameter: 30,
         weight: 500,
       },
+      count: 0,
     },
     {
       id: 4,
@@ -47,6 +50,7 @@
         diameter: 30,
         weight: 500,
       },
+      count: 0,
     },
     {
       id: 5,
@@ -59,6 +63,7 @@
         diameter: 30,
         weight: 500,
       },
+      count: 0,
     },
     {
       id: 6,
@@ -71,6 +76,7 @@
         diameter: 30,
         weight: 500,
       },
+      count: 0,
     },
     //last
     {
@@ -84,6 +90,7 @@
         weight: 500,
       },
       category: ["Веган"],
+      count: 0,
     },
     {
       id: 8,
@@ -96,6 +103,7 @@
         weight: 500,
       },
       category: ["С курицей"],
+      count: 0,
     },
     {
       id: 9,
@@ -108,6 +116,7 @@
         weight: 500,
       },
       category: ["Мясные", "С курицей"],
+      count: 0,
     },
     {
       id: 10,
@@ -120,6 +129,7 @@
         weight: 500,
       },
       category: ["С курицей"],
+      count: 0,
     },
     {
       id: 11,
@@ -132,6 +142,7 @@
         weight: 500,
       },
       category: ["Мясные"],
+      count: 0,
     },
     {
       id: 12,
@@ -144,6 +155,7 @@
         weight: 500,
       },
       category: ["Веган"],
+      count: 0,
     },
   ],
   ingredients: [
@@ -151,21 +163,25 @@
       name: "Сырный бортик",
       img: "https://cdn.dodostatic.net/static/Img/Ingredients/7dc4f7eb691b437aa09c56aa133fb1d5.png",
       price: 179,
+      count: 0,
     },
     {
       name: "Сливочная моцарелла",
       img: "https://cdn.dodostatic.net/static/Img/Ingredients/000D3A262427A95111EA083CF38D509D",
       price: 79,
+      count: 0,
     },
     {
       name: "Сыры чеддер и пармезан",
       img: "https://cdn.dodostatic.net/static/Img/Ingredients/000D3A262427A95111E9DBA9907841D1",
       price: 79,
+      count: 0,
     },
     {
       name: "Нежный цыпленок",
       img: "https://cdn.dodostatic.net/static/Img/Ingredients/000D3A262427A95111E9DB9FEDF53067",
       price: 79,
+      count: 0,
     },
   ],
 }
